SERVER-30836: Dont rely on boost's file rename functionality for necessary fsyncing on POSIX